--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,12 @@
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/5968/5968350.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "https://cdn-icons-png.flaticon.com/512/5968/5968350.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
