--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,7 @@
     {
       "src": "https://cdn-icons-png.flaticon.com/512/5968/5968350.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
 }
