--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Laporin",
-  "name": "Laporin AI SaaS",
+  "short_name": "PajakPro",
+  "name": "Pajak Pro AI",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f5f5f7",
